2009-12-03 Janne Jalkanen <jalkanen@apache.org>

        * 3.0.0-svn-189
        
        * JSPWIKI-616: WikiPageEvent now takes in a WikiPath instead of
        String.

        * 3.0.0-svn-188
        
        * Fixed ContentManager.checkin() to use a separate Session for
        copying - it had an off-by-one error when storing the old version.
        This fixes quite a few tests...
        
2009-12-01 Janne Jalkanen <jalkanen@apache.org>

        * 3.0.0-svn-187
        
        * Bug fix: ContentManager.deleteVersion() no longer restores
        the page (as empty) after deletion.  Oops.  (Technically,
        JCRWikiPage.getJCRNode() was creating the page instead of throwing
        an exception.)
        
        * Deprecated WikiEngine.getPureText() [use WikiPage.getContentAsString()
        instead.]
        
        * ContentManager.deleteVersion() fires a NODE_SAVED instead of NODE_DELETED,
        since deletion implies removal of the entire page.
        
2009-11-28 Janne Jalkanen <jalkanen@apache.org>

        * 3.0.0-svn-186
        
        * ContentManager.isNew() was checking if ATTR_CREATED exists
        after it had ensured it had one to determine whether page is new
        or not. Oops.
        
        * More fixes to ContentManager.checkin() and save() as it was
        accidentally creating old pages with wrong version numbers, which
        in turn caused deletions to fail in some places.
        
2009-11-27 Andrew Jaquith <ajaquith AT apache DOT org>

        * 3.0.0-svn-185

        * Significantly re-worked GroupActionBean and related JSPs.
        Event handlers save and saveNew were combined. Message keys
        were moved and/or renamed to make the *GroupContent.jsp pages
        simpler.

        * NewBlogEntry.jsp received the Stripes treatment; its logic
        moved to EditActionBean.blog().
        
        * rss.jsp received the Stripes treatment; its logic moved
        to RSSActionBean.rss(). ** not fully tested yet **.